--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ Version: - v1.0
   padding: 0;
 }
 
+
 body {
   font-family: "Dosis", sans-serif;
   font-size: 16px;
@@ -3771,3 +3772,18 @@ img {
 /* ======= The End ======= */
 
 /*# sourceMappingURL=style.css.map */
+
+.logo {
+  width: 75px;
+  height: 75px;
+  object-fit: contain;
+  border-radius: 10%;
+}
+
+/* Adjust logo size for mobile and tablets */
+@media only screen and (max-width: 768px) {
+  .logo {
+    width: 50px;
+    height: 50px;
+  }
+}
