--- a/style.css
+++ b/style.css
@@ -17,6 +17,54 @@ Version: - v1.0
 @import url(css/font-awesome.min.css);
 @import url(css/elegant-icon.css);
 
+.nav-brand {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  width: 70%;
+  /* Set the width relative to its container */
+  max-width: 300px;
+  /* Set a maximum width */
+  height: auto;
+}
+
+/* Additional styling for smaller screens */
+@media only screen and (max-width: 576px) {
+  .nav-brand {
+    justify-content: center;
+    /* Center the logo on smaller screens */
+  }
+
+  .logo {
+    max-width: 200px;
+    /* Adjust maximum width for smaller screens */
+  }
+}
+
+/* Additional styling for medium screens */
+@media only screen and (min-width: 577px) and (max-width: 991px) {
+  .nav-brand {
+    justify-content: center;
+    /* Center the logo on medium screens */
+  }
+
+  .logo {
+    max-width: 250px;
+    /* Adjust maximum width for medium screens */
+  }
+}
+
+/* Additional styling for larger screens */
+@media only screen and (min-width: 992px) {
+  .nav-brand {
+    justify-content: flex-start;
+    /* Align the logo to the start on larger screens */
+  }
+}
+
 /* :: 3.0 Base CSS */
 * {
   margin: 0;
